# dynamicnoti

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config.example/: config.toml  theme.toml
config.example/types/: deal.toml  generic.toml  song.toml
crates/dynamicnoti/: Cargo.toml
crates/dynamicnoti-anim/: Cargo.toml
crates/dynamicnoti-anim/src/: lib.rs
crates/dynamicnoti-core/: Cargo.toml
crates/dynamicnoti-core/src/: bind.rs  config.rs  image.rs  introspect.rs  lib.rs  queue.rs  resolver.rs  scene.rs  style.rs  template.rs  theme.rs
crates/dynamicnoti-proto/: Cargo.toml
crates/dynamicnoti-proto/src/: lib.rs
crates/dynamicnoti-render/: Cargo.toml
crates/dynamicnoti-render/src/: app.rs  blur.rs  gpu.rs  image_cache.rs  layout.rs  lib.rs  phase.rs  text.rs
crates/dynamicnoti-sources/: Cargo.toml
crates/dynamicnoti-sources/src/: freedesktop.rs  ipc.rs  lib.rs  mpris.rs  watcher.rs
crates/dynamicnoti-sources/tests/: ipc_roundtrip.rs
crates/dynamicnoti/src/: main.rs
crates/dynamicnotid/: Cargo.toml
crates/dynamicnotid/src/: driver.rs  headless.rs  lock.rs  main.rs
