[package]
name = "dynamicnoti-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# CORE IS PURE: no async, no GPU, no Wayland, no zbus. Only serde + error types.
# If you reach for tokio/wgpu/zbus here, you are in the wrong crate.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
