[package]
name = "dynamicnotid"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dynamicnotid"
path = "src/main.rs"

[features]
# `dbus` builds the D-Bus sources (freedesktop server + MPRIS/Cider) and is ON by default so a
# plain `cargo run -p dynamicnotid` is the full daemon. Taking over org.freedesktop.Notifications
# is still gated by config (`take_over`, off by default). Build headless-only (no zbus) with
# `--no-default-features` — the runtime DYNAMICNOTI_HEADLESS=1 path is independent of this.
default = ["dbus"]
dbus = ["dynamicnoti-sources/dbus"]

# The daemon: spins up the tokio thread (sources), owns the main-thread render loop, builds
# the calloop<->flume channel bridge, installs the catch_unwind fault-isolation fences.
[dependencies]
dynamicnoti-core = { path = "../dynamicnoti-core" }
dynamicnoti-proto = { path = "../dynamicnoti-proto" }
dynamicnoti-anim = { path = "../dynamicnoti-anim" }
dynamicnoti-render = { path = "../dynamicnoti-render" }
dynamicnoti-sources = { path = "../dynamicnoti-sources" }
tokio = { workspace = true }
calloop = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
